Restructured the config files
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19626 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/mpa-alg-predicate.properties
+++ b/config/includes/mpa-alg-predicate.properties
@@ -1,8 +1,10 @@
-cpa.predicate.refinement.performInitialStaticRefinement=false
-cpa.predicate.refinement.predicateBasisStrategy=ALL
-cpa.predicate.precision.sharing=SCOPE
-cpa.predicate.refinement.sharePredicates=true
-cpa.predicate.solver=SMTINTERPOL
+#include spa-predicate.properties
+
+# MultiEdges are not supported by the current implementation
+#   of the ControlAutomataCPA (bug/broken implementation)
+cfa.useMultiEdges=false
+
+analysis.checkCounterexamples=false
 
 # We do not use the old coverage mechanism. We use CoverageCPA! 
 coverage.stdout.enabled=false
@@ -13,23 +15,12 @@ coverage.mode=REACHED
 #   (this might be the case if no new partitioning was found)
 analysis.stopAfterError=true
 
-analysis.checkCounterexamples=false
 analysis.checkMultipleProperties=REUSE_CPA_COMPONENTS
-
-# MultiEdges are not supported by the current implementation
-#   of the ControlAutomataCPA (bug/broken implementation)
-cfa.useMultiEdges=false
 
 cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
-
-# Do not disable properties within the precision adjustment
-#   based on the number of violations! 
-#   This is done by the MPA algorithm itself.
 cpa.automaton.prec.limit.violations=1
-
 cpa.automaton.prec.onHandledTarget=BOTTOM
 cpa.automaton.splitOnTargetStatesToInactive=true
-
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
