--- a/config/includes/spa-predicate.properties
+++ b/config/includes/spa-predicate.properties
@@ -1,11 +1,12 @@
-
+# MultiEdges are not supported by the current implementation                                                                                         
+#   of the ControlAutomataCPA (bug/broken implementation)  
 cfa.useMultiEdges = false
 
+cpa.predicate.refinement.performInitialStaticRefinement=false 
 cpa.predicate.refinement.predicateBasisStrategy=ALL
 cpa.predicate.precision.sharing=SCOPE
 cpa.predicate.refinement.sharePredicates=true
 cpa.predicate.refinement.avoidRootsWithSeveralSiblings=true
-cpa.predicate.refinement.performInitialStaticRefinement=false 
+cpa.predicate.solver=SMTINTERPOL
 
 analysis.checkCounterexamples=false
-
