Enable the driver-related settings for all configs used for MPA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19627 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/spa-predicate.properties
+++ b/config/includes/spa-predicate.properties
@@ -10,3 +10,5 @@ cpa.predicate.refinement.avoidRootsWithSeveralSiblings=true
 cpa.predicate.solver=SMTINTERPOL
 
 analysis.checkCounterexamples=false
+
+#include ./ldv-adjustments.properties
