increased the reuse of tiger property files and added new ones for using power sets and cross products
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@19685 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variants.properties
+++ b/config/tiger-variants.properties
@@ -57,7 +57,7 @@ limits.time.cpu = 3600s
 tiger.reusePredicates = false
 tiger.reuseARG = false
 
-tiger.checkCoverage = false
+tiger.checkCoverage = true
 tiger.numberOfTestGoalsPerRun = 1
 tiger.allCoveredGoalsPerTestCase = false
 tiger.printLabels = true
