--- a/config/tiger-variabilityAware-value.properties
+++ b/config/tiger-variabilityAware-value.properties
@@ -5,6 +5,8 @@
 #include tiger-variabilityAware.properties
 #include tiger-variants-value.properties
 
+CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.functionpointer.FunctionPointerCPA, cpa.predicate.PredicateCPA, cpa.value.ValueAnalysisCPA, cpa.bdd.BDDCPA
+
 ValueAnalysisCPA.precision.variableBlacklist = (\w)*__SELECTED_FEATURE_(\w)*
 ValueAnalysisCPA.precision.trackBooleanVariables = true
 ValueAnalysisCPA.precision.trackIntAddVariables = true
