Configs fixed. Also a single-prop verification must split on a target for comparability.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/muauto@19710 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/includes/mpa-alg.properties
+++ b/config/includes/mpa-alg.properties
@@ -1,5 +1,3 @@
-#include spa-predicate.properties
-
 # MultiEdges are not supported by the current implementation
 #   of the ControlAutomataCPA (bug/broken implementation)
 cfa.useMultiEdges=false
@@ -21,6 +19,6 @@ cpa.automaton.breakOnTargetState=1
 cpa.automaton.merge.onTop=false
 cpa.automaton.prec.limit.violations=1
 cpa.automaton.prec.onHandledTarget=BOTTOM
-cpa.automaton.splitOnTargetStatesToInactive=true
+# cpa.automaton.splitOnTargetStatesToInactive=true
 cpa.automaton.stopAfterOneFeasiblePathPerProperty=false
 
