--- a/config/includes/spa-predicate.properties
+++ b/config/includes/spa-predicate.properties
@@ -1,5 +1,4 @@
-# MultiEdges are not supported by the current implementation                                                                                         
-#   of the ControlAutomataCPA (bug/broken implementation)  
+# MultiEdges are not supported by the current implementation              #  of the ControlAutomataCPA (bug/broken implementation)  
 cfa.useMultiEdges = false
 
 cpa.predicate.refinement.performInitialStaticRefinement=false 
@@ -11,4 +10,9 @@ cpa.predicate.solver=SMTINTERPOL
 
 analysis.checkCounterexamples=false
 
+# Splitting on target states is also relevant for
+#  single-property vierification
+cpa.automaton.splitOnTargetStatesToInactive=true
+
 #include ./ldv-adjustments.properties
+
