--- a/config/mpa-alg-predicate-abelf.properties
+++ b/config/mpa-alg-predicate-abelf.properties
@@ -1,2 +1,2 @@
-#include predicateAnalysis-PredAbsRefiner-ABElf.properties
-#include ./includes/mpa-alg-predicate.properties 
+#include includes/spa-predicate-ABElf.properties
+#include includes/mpa-alg.properties 
