added that feature variables will be ignored in standard variability aware tiger properties.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@19756 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variabilityAware.properties
+++ b/config/tiger-variabilityAware.properties
@@ -12,6 +12,12 @@ BDDCPA.precision.trackIntAddVariables = false
 BDDCPA.precision.trackIntEqualVariables = false
 BDDCPA.precision.trackVariablesBesidesEqAddBool = false
 
+# Regexp pattern for feature variables.
+cpa.predicate.featureVariablePattern = "(\\w)*__SELECTED_FEATURE_(\\w)"
+
+# Ignore feature variables? They should be tracked with a more efficient CPA.
+cpa.predicate.ignoreFeatureVariables = true
+
 # ########################
 # CPAtiger configuration #
 # ########################
