--- a/config/mpa-alg-relevance.properties
+++ b/config/mpa-alg-relevance.properties
@@ -1,2 +1,2 @@
 #include ./includes/locationAnalysis.properties
-#include ./includes/mpa-alg-predicate.properties 
+#include ./includes/mpa-alg.properties 
