added new property files for tiger to enable the useNoOmegaLabel option.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@19772 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-noOmega.properties
+++ b/config/tiger-noOmega.properties
@@ -2,6 +2,5 @@
 # CPAchecker configuration #
 # ##########################
 
-#include tiger-variants-value.properties
-
-tiger.usePowerset = true
+tiger.useOmegaLabel = false
+cpa.automaton.splitOnTargetStatesToInactive = true
