--- a/config/tiger-variants-value-powerset-noOmega.properties
+++ b/config/tiger-variants-value-powerset-noOmega.properties
@@ -2,6 +2,5 @@
 # CPAchecker configuration #
 # ##########################
 
-#include tiger-variants-value.properties
-
-tiger.usePowerset = true
+#include tiger-variants-value-powerset.properties
+#include tiger-noOmega
