--- a/config/tiger-variants.properties
+++ b/config/tiger-variants.properties
@@ -12,6 +12,8 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 # Do not switch on yet! It will cause wrong results.
 cfa.useMultiEdges = false
 
+cpa.automaton.splitOnTargetStatesToInactive=false
+
 # reverse postorder (a more restrictive topological ordering) is better than dfs if elements may be merged
 # callstack is necessary for ABE with blocks across function boundaries to work well
 analysis.traversal.order = bfs
