Add customized array set to run configuration
This needs the customized array set, i.e. the array set with smaller
arrays, being present in a special location.

Also remove this location from being tracked by git

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/heaparray-integration@19780 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/.gitignore
+++ b/.gitignore
@@ -214,6 +214,7 @@
 
 /.metadata
 /test/programs/benchmarks
+/test/programs/array-simplified-benchmarks
 
 /war/WEB-INF/appengine-generated
 /war/WEB-INF/classes
