added property to tiger properties that presence conditions and goals will be excluded from test generation in combination.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@19787 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variants.properties
+++ b/config/tiger-variants.properties
@@ -13,6 +13,7 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 cfa.useMultiEdges = false
 
 cpa.automaton.splitOnTargetStatesToInactive=false
+cpa.automaton.prec.onHandledTarget=INACTIVE
 
 # reverse postorder (a more restrictive topological ordering) is better than dfs if elements may be merged
 # callstack is necessary for ABE with blocks across function boundaries to work well
