Implement new BlockPartitioningBuilder within an option
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/DelegatingBAMRefinerLDV@20200 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/ldv-bam.properties
+++ b/config/ldv-bam.properties
@@ -11,6 +11,7 @@
 #include valueAnalysis-bam.properties
 
 cpa.bam.blockHeuristic = FunctionPartitioning
+cpa.bam.useExtendedPartitioningBuilder = true
 
 cpa.predicate.blk.alwaysAtFunctions = true
 cpa.predicate.blk.alwaysAtLoops     = true
