--- a/config/ldv-mav.properties
+++ b/config/ldv-mav.properties
@@ -15,7 +15,8 @@ analysis.mav.specificationComparator=VIOLATED_PROPERTY
 cpa.arg.errorPath.file=ErrorPath.%d.txt
 
 # Variable paramaters
-analysis.mav.specificationTimeLimit=900
-analysis.mav.abstractionTimeLimit=100
-analysis.mav.hardTimeLimit=20
-analysis.mav.precisionClearingTimeLimit=10
+analysis.mav.firstIntervalTimeLimit=100
+analysis.mav.assertTimeLimit=900
+analysis.mav.basicIntervalTimeLimit=100
+analysis.mav.idleIntervalTimeLimit=20
+analysis.mav.precisionClearingTimeLimit=0
