Reducing the number of refinements
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@20438 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variabilityAware.properties
+++ b/config/tiger-variabilityAware.properties
@@ -23,3 +23,9 @@ cpa.predicate.ignoreFeatureVariables = true
 # ########################
 
 tiger.tiger_with_presenceConditions = true
+
+cpa.predicate.refinement.performInitialStaticRefinement=false 
+cpa.predicate.refinement.predicateBasisStrategy=ALL
+cpa.predicate.precision.sharing=SCOPE
+cpa.predicate.refinement.sharePredicates=true
+cpa.predicate.refinement.avoidRootsWithSeveralSiblings=true
