Correct splitting behaviour on target states
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/checkerInclTiger@20441 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/tiger-variants.properties
+++ b/config/tiger-variants.properties
@@ -12,8 +12,8 @@ CompositeCPA.cpas = cpa.location.LocationCPA, cpa.callstack.CallstackCPA, cpa.fu
 # Do not switch on yet! It will cause wrong results.
 cfa.useMultiEdges = false
 
-cpa.automaton.splitOnTargetStatesToInactive=false
-cpa.automaton.prec.onHandledTarget=INACTIVE
+cpa.automaton.splitOnTargetStatesToInactive=true
+cpa.automaton.prec.onHandledTarget=BOTTOM
 
 # reverse postorder (a more restrictive topological ordering) is better than dfs if elements may be merged
 # callstack is necessary for ABE with blocks across function boundaries to work well
