Let configuration predicateAnalysis-as-bitprecise-cex-check do SAT checks for target states in precision adjustment instead of in transfer relation because we would like to remove the latter.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/predicate-no-targetStateSatCheck@20458 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/config/cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
+++ b/config/cex-checks/predicateAnalysis-as-bitprecise-cex-check.properties
@@ -11,6 +11,11 @@ cpa.predicate.blk.useCache = false
 cpa.predicate.blk.alwaysAtFunctions = false
 cpa.predicate.blk.alwaysAtLoops     = false
 
+// Ensure SAT check at target location in precision adjustment
+cpa.predicate.checkBlockFeasibility = true
+// and disable deprecated SAT check at target location in transfer relation
+cpa.predicate.targetStateSatCheck = false
+
 // Secondary analysis should not produce output.
 output.disable = true
 
